@@ -1,5 +1,10 @@
 2007-12-14  Kevin Kubasik <Kevin@Kubasik.net> 
 
+	* Banter/AvatarSelector.cs: Update to a FileChooser and try to set the
+	  Avatar for when gabber starts to support it.
+
+2007-12-14  Kevin Kubasik <Kevin@Kubasik.net> 
+
 	* Banter.mdp, configure.ac, Banter/ChatType.cs, Banter/ChatWindow.cs,
 	  Banter/Makefile.am: Add SpellCheck support to the chat window.
 
